Changed the index.html file

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <a href="https://github.com/saksham-mittal" style="cursor: pointer;">
                             <img src="my-icon.png" class="pr-2" style="height: 100%; float: left;">
                         </a>
-                        <a href="https://github.com/saksham-mittal" style="color: #000; text-decoration: none; cursor: pointer;">
+                        <a href="https://github.com/saksham-mittal/image-popup-jquery-plugin" style="color: #000; text-decoration: none; cursor: pointer;">
                             <span class="name-git lead">saksham-mittal (Saksham Mittal)</span><br>
                         </a>
                         <span class="bio-git lead">saksham-mittal has 5 repositories available. Follow their code on GitHub.</span><br>
@@ -193,28 +193,28 @@
         
         <div class="fluid-container" style="background-color: #fff;">
         
-            <div class="row pt-5 pb-5 ml-4 mr-4">
-                <div class="col-md-4 col-xs-10 offset-xs-1" id="posts">
-                    <div class="card ml-1 mb-5">
+            <div class="row pt-5 pb-5 ml-5 mr-5">
+                <div class="col-md-4 col-xs-10 offset-xs-1 p-0" id="posts">
+                    <div class="card ml-1 mb-1">
                         <div class="image-container"><img class="img img-popup" src="images/img1.jpg"></div>
                     </div>
-                    <div class="card ml-1 mb-5">
+                    <div class="card ml-1 mb-1">
                         <div class="image-container"><img class="img img-popup" src="images/img2.jpg"></div>
                     </div>
                 </div>
-                <div class="col-md-4 col-xs-10 offset-xs-1" id="posts">
-                    <div class="card ml-1 mb-5">
+                <div class="col-md-4 col-xs-10 offset-xs-1 p-0" id="posts">
+                    <div class="card ml-1 mb-1">
                         <div class="image-container"><img class="img img-popup" src="images/img5.jpg"></div>
                     </div>
-                    <div class="card ml-1 mb-5">
+                    <div class="card ml-1 mb-1">
                         <div class="image-container"><img class="img img-popup" src="images/img6.jpg"></div>
                     </div>
                 </div>
-                <div class="col-md-4 col-xs-11 offset-xs-1" id="posts">
-                    <div class="card ml-1 mb-5">
+                <div class="col-md-4 col-xs-11 offset-xs-1 p-0" id="posts">
+                    <div class="card ml-1 mb-1">
                         <div class="image-container"><img class="img img-popup" src="images/img3.jpg"></div>
                     </div>
-                    <div class="card ml-1 mb-5">
+                    <div class="card ml-1 mb-1">
                         <div class="image-container"><img class="img img-popup" src="images/img4.jpg"></div>
                     </div>
                 </div>
